# mycelium

./: .gitignore  README.md
core/: Cargo.toml  build.rs
core/src/: ffi.rs  lib.rs
core/src/api/: mod.rs
core/src/domain/: mod.rs
core/src/network/: mod.rs  node.rs  protocol.rs
core/src/storage/: mod.rs
core/src/util/: mod.rs
mycelium-node/: Cargo.toml  build.rs  config.toml
mycelium-node/src/: config.rs  main.rs
mycelium-node/src/grpc/: mod.rs  server.rs
mycelium-node/src/grpc/proto/: mod.rs  mycelium_grpc.rs
mycelium-node/src/p2p/: mod.rs  node.rs
mycelium-p2p/: Cargo.toml  build.rs
mycelium-p2p/src/: ffi.rs  lib.rs  node.rs
mycelium-p2p/src/proto/: mod.rs  mycelium.rs
proto/: README.md  mycelium.proto
proto/grpc/: common.proto  copy.proto  echo.proto  mycelium_service.proto  search.proto
proto/p2p/: envelope.proto  message.proto  search.proto
ui/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
ui/android/app/: build.gradle.kts
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/example/mycelium_ui/: MainActivity.kt
ui/integration_test/: simple_test.dart
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart
ui/lib/src/: mycelium_ffi.dart
ui/lib/src/rust/: frb_generated.dart
ui/linux/: CMakeLists.txt
ui/linux/flutter/: generated_plugins.cmake
ui/linux/runner/: my_application.cc
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/rust_builder/: pubspec.yaml
ui/rust_builder/android/: build.gradle  settings.gradle
ui/rust_builder/android/src/main/: AndroidManifest.xml
ui/rust_builder/ios/: mycelium_core.podspec
ui/rust_builder/linux/: CMakeLists.txt
ui/rust_builder/macos/: mycelium_core.podspec
ui/rust_builder/windows/: CMakeLists.txt
ui/test/: widget_test.dart
ui/tool/: gen_proto.dart
ui/web/: index.html  manifest.json
ui/windows/: CMakeLists.txt
ui/windows/flutter/: generated_plugins.cmake
ui/windows/runner/: Runner.rc  main.cpp
