[package]
name = "mycelium-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libp2p = { version = "0.54", features = ["tcp", "websocket", "dns", "noise", "tokio", "yamux", "gossipsub", "mdns", "macros", "request-response"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
prost = "0.13"
async-trait = "0.1"
bytes = "1.2"
futures = "0.3"
libc = "0.2"
env_logger = "0.11"
log = "0.4"

[build-dependencies]
prost-build = "0.13"
