[package]
name = "mycelium_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
libp2p = { version = "0.54", features = ["tcp", "websocket", "dns", "noise", "tokio", "yamux", "gossipsub", "mdns", "macros", "request-response"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
async-trait = "0.1"
futures = "0.3"
env_logger = "0.11"
log = "0.4"
flutter_rust_bridge = "=2.9.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
