[package]
name = "mycelium-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13", features = ["transport"] }
prost = "0.13"
libp2p = { version = "0.51", features = ["tcp", "websocket", "dns", "noise", "tokio", "yamux", "mplex", "gossipsub"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
toml = "0.8"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.13"
