[package]
name = "mycelium-p2p"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libp2p = { version = "0.51", features = ["tcp", "websocket", "dns", "noise", "tokio", "yamux", "mplex", "gossipsub", "mdns", "async-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.19"
tracing = "0.1"
