[package]
name = "mycelium-p2p"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libp2p = { version = "0.55", features = ["tcp", "websocket", "dns", "noise", "tokio", "yamux", "gossipsub", "mdns", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
prost = "0.13"

[build-dependencies]
prost-build = "0.13"
